FIX: Fixed CategoryPage layout and fixed body scrollbar hiden when modal active

--- a/src/components/entities/CategoryItem/index.module.scss
+++ b/src/components/entities/CategoryItem/index.module.scss
@@ -1,6 +1,13 @@
 .wrapper {
+	cursor: pointer;
 	--text-border-margins: 15px;
 	position: relative;
+	transition: var(--tran-low);
+	box-shadow: 0 1px 2px 0 rgba(16, 24, 40, 5%);
+
+	&:hover {
+		scale: 1.04;
+	}
 	img {
 		width: 100%;
 		height: 100%;
