--- a/src/components/widgets/CategoryCategories/index.module.scss
+++ b/src/components/widgets/CategoryCategories/index.module.scss
@@ -24,7 +24,19 @@
 
 @media screen and (max-width: 500px) {
 	.wrapper {
-		gap: 15px;
-		grid-template-columns: repeat(auto-fill, minmax(165px, 1fr));
+		gap: 10px;
+		grid-template-columns: repeat(auto-fill, minmax(108px, 1fr));
+	}
+	.item {
+		--text-border-margins: 7px;
+		overflow: hidden;
+		border-radius: 15px;
+	}
+	.item_title {
+		font-size: 14px;
+	}
+	.item_plaque {
+		padding: 6px 14px;
+		font-size: 8px;
 	}
 }
